--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,32 @@
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.1.2
 cycler==0.11.0
+Cython==0.29.28
 Flask==2.1.1
 fonttools==4.33.3
+HTMLParser==0.0.2
+idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 kiwisolver==1.4.2
 MarkupSafe==2.1.1
 matplotlib==3.5.1
 numpy==1.22.3
+olefile==0.46
 opencv-python==4.5.5.64
 packaging==21.3
 Pillow==9.1.0
 pyparsing==3.0.8
+PySocks==1.7.1
 pytesseract==0.3.9
 python-dateutil==2.8.2
+PyYAML==6.0
+requests==2.27.1
 six==1.16.0
+texttable==1.6.4
+urllib3==1.26.9
+virustotal-api==1.1.11
+virustotal-python==1.0.0
+vt==3.1.3.7
 Werkzeug==2.1.1
