--- a/.gitignore
+++ b/.gitignore
@@ -135,11 +135,12 @@ dmypy.json
 # Flask
 app/keys
 
-#testing
+# Internals
 app/img/dewarp*
-app/outbox/dewarp*
-app/uploads/dewarp*
-app/runTest.py
+app/outbox/*
+app/uploads/*
+app/test.py
+app/logs/*
 
 
 # future 
