Complete system overhaul  1 year later (#3)
* Rebuild

- Added Backend
- Scanner Class & pytorch model loading
- config changes
- Project Restructure

* Encorporate Frontend Changes into Rebuild (#2)

* Update app.py

adding css endpoints

* Basic Styles / HTML setup

* Stylesheet / image addition

* todos added

---------

Co-authored-by: Prd46 <prd46@drexel.edu>

* Working Prototype

- Added FileHanlder class
- Reworked app.py
- modified html
- added features to Scanner class

* file cleanup

cleaned up inputs and outbox dirs

* adjusted crop buffering

* Fixed pdf viewing

* Contour Approximation

if corners are not visible, the minimum bounding quadrilateral is calculated. see boundingQuad.py for details.

* Contour Approximation Fixes

---------

Co-authored-by: Prd46 <prd46@drexel.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -135,9 +135,17 @@ dmypy.json
 # Flask
 app/keys
 
-#testing
+# Internals
 app/img/dewarp*
-app/outbox/dewarp*
-app/uploads/dewarp*
-app/runTest.py
+app/outbox/*
+app/uploads/*
+app/test.py
+app/logs/*
 
+
+# future 
+rotating_calipers.py
+
+
+# Debug 
+debug_images
